--- a/assessment_paynet.ipynb
+++ b/assessment_paynet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoVS9LOtncfAg1eF/5CQp1",
+      "authorship_tag": "ABX9TyMT3K+0S5hfSJT6a1gNXLWk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,20 +29,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Summary:\n",
-        "- Setup PySpark in Google Colab\n",
-        "- Start a Spark Session\n",
-        "- Upload Dataset\n",
-        "- Read the Dataset with PySpark\n",
-        "- Understand the Data\n",
-        "- Data Cleaning & Transformation\n",
+        "##Summary:\n",
+        "\n",
+        "Setup PySpark in Google Colab\n",
+        "\n",
+        "Start a Spark Session\n",
+        "\n",
+        "Upload Dataset\n",
+        "\n",
+        "Read the Dataset with PySpark\n",
+        "\n",
+        "Understand the Data\n",
+        "\n",
+        "Data Cleaning & Transformation\n",
         " - handling missing value\n",
-        "- Handle PII Data\n",
+        "\n",
+        "Handle PII Data\n",
         " - masked the PII column\n",
         " - drop the original PII column\n",
         " - check the count for customer without exposing the PII data\n",
-        "- Flatten the data (conduct the inspection whether if needed)\n",
-        "- Data Visualisation\n",
+        "\n",
+        "Flatten the data (conduct the inspection whether if needed)\n",
+        "\n",
+        "Data Visualisation\n",
         " - Total Transaction Amount by Income Category\n",
         " - Number of Customer by Income Category"
       ],
