--- a/assessment_paynet.ipynb
+++ b/assessment_paynet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBwHZv2/XmMHVyshhifjaO",
+      "authorship_tag": "ABX9TyMYamQg+AlpY2fLYseAVWaZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -913,7 +913,7 @@
       "source": [
         "Interpretation 1:\n",
         "\n",
-        "The bar chart showns that customers earning less than 40K dolar contribute the most to the total transaction amount, suggesting that despite having lower incomes, they may spend more frequently or make larger purchase in certain categories. In contrast, customers in the 120K+ dolar income category contribute the least, then followed closely by those with an \"Unknown\" income category, which may indicate lower engagement or different spendinf behaviours compared to other groups.\n",
+        "The bar chart showns that customers earning less than 40K dollar contribute the most to the total transaction amount, suggesting that despite having lower incomes, they may spend more frequently or make larger purchase in certain categories. In contrast, customers in the 120K+ dolar income category contribute the least, then followed closely by those with an \"Unknown\" income category, which may indicate lower engagement or different spendinf behaviours compared to other groups.\n",
         "\n",
         "\n"
       ],
@@ -996,7 +996,7 @@
       "source": [
         "Interpretation 2:\n",
         "\n",
-        "The chart reveals that the largest group of customers falls under the “Less than 40K dolar” income category, indicating a significant portion of the customer base comes from lower-income segments. On the other end, the “$120K+” group has the smallest number of customers, followed closely by those in the “Unknown” income category, suggesting either limited representation of high-income earners or incomplete data capture for some customers."
+        "The chart reveals that the largest group of customers falls under the “Less than 40K dollar” income category, indicating a significant portion of the customer base comes from lower-income segments. On the other end, the “$120K+” group has the smallest number of customers, followed closely by those in the “Unknown” income category, suggesting either limited representation of high-income earners or incomplete data capture for some customers."
       ],
       "metadata": {
         "id": "dxkVDfAN8ngF"
