--- a/etl_vault_pd_stock_price.ipynb
+++ b/etl_vault_pd_stock_price.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **ETL with Pandas - Fraud Data**"
+        "# **ETL with Pandas - Stock Price**"
       ],
       "metadata": {
         "id": "snG8EAMVkvV_"
