Fix typo in markdown header

--- a/etl_vault_ps_csv_order_item.ipynb
+++ b/etl_vault_ps_csv_order_item.ipynb
@@ -744,7 +744,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Verify the File into Target Repo**"
+        "# **Verify the File in Target Repo**"
       ],
       "metadata": {
         "id": "3FeU7D0zASDt"
